--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<hola>
+<html>
+
+<head>
+    <title> Our team </title>
+</head>
+
+<body>
+<h1>Our Team</h1>
+<p>Latin Lovers is a team that has the purpose of making an application in tethys by the end of this semester. </p>
+<p>Our web app IDENTIFYING ZONES FOR FOREST USE is our first app </p>
+
+<h2>Alex White</h2>
+<h6>Visualization / Formatting:</h6>
+<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\AlexWhite.jfif" alt="Alex" style="width:25%">
+<p>a good person who speaks English and Spanish </p>
+
+<h2>Daniel Arana</h2>
+<h6>Map Publishing / Editing</h6>
+<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\DanielArana.jpeg" alt="Dan" style="width:25%">
+<p>a good person who speaks English and Spanish </p>
+
+
+<h2>Darlly Rojas</h2>
+<h6>Geoprocess</h6>
+<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\DarllyRojas.jpg" alt="Darlly" style="width:25%">
+<p> a good person who speaks Spanish, and has a toddler</p>
+
+<h2>Sergio Barbosa </h2>
+<h6>General Leader and Visual design:</h6>
+<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\SergioBarbosa.jfif" alt="Alex" style="width:25%">
+<p> a good person who speaks Spanish and English, and has twins a 2 month old baby</p>
+
+
+
+</body>
+</html>
