--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <h2>Alex White</h2>
 <h6>Visualization / Formatting:</h6>
-<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\AlexWhite.jfif" alt="Alex" style="width:25%">
+<img src="DarllyRojas.github.io\AlexWhite.jfif" alt="Alex" style="width:25%">
 <p>a good person who speaks English and Spanish </p>
 
 <h2>Daniel Arana</h2>
 <h6>Map Publishing / Editing</h6>
-<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\DanielArana.jpeg" alt="Dan" style="width:25%">
+<img src="DarllyRojas.github.io\DanielArana.jpeg" alt="Dan" style="width:25%">
 <p>a good person who speaks English and Spanish </p>
 
 
 <h2>Darlly Rojas</h2>
 <h6>Geoprocess</h6>
-<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\DarllyRojas.jpg" alt="Darlly" style="width:25%">
+<img src="DarllyRojas.github.io\DarllyRojas.jpg" alt="Darlly" style="width:25%">
 <p> a good person who speaks Spanish, and has a toddler</p>
 
 <h2>Sergio Barbosa </h2>
 <h6>General Leader and Visual design:</h6>
-<img src="C:\Azulona la Ballena\Winter2020\DarllyRojas.github.io-master\SergioBarbosa.jfif" alt="Alex" style="width:25%">
+<img src="DarllyRojas.github.io\SergioBarbosa.jfif" alt="Alex" style="width:25%">
 <p> a good person who speaks Spanish and English, and has twins a 2 month old baby</p>
 
 
