--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h2>Alex White</h2>
 <h6>Visualization / Formatting:</h6>
-<img src="DarllyRojas.github.io\AlexWhite.jpg" alt="Alex" style="width:15%">
+<img src="DarllyRojas.github.io\AlexWhite.jpeg" alt="Alex" style="width:15%">
 <p>a good person who speaks English and Spanish </p>
 
 <h2>Daniel Arana</h2>
@@ -27,7 +27,7 @@
 
 <h2>Sergio Barbosa </h2>
 <h6>General Leader and Visual design:</h6>
-<img src="DarllyRojas.github.io\SergioBarbosa.jpg" alt="Alex" style="width:15%">
+<img src="DarllyRojas.github.io\SergioBarbosa.jpeg" alt="Alex" style="width:15%">
 <p> a good person who speaks Spanish and English, and has twins a 2 month old baby</p>
 
 
