--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <h6>Visualization / Formatting:</h6>
 <img src="DarllyRojas.github.io\AlexWhite.jpeg" alt="Alex" style="width:15%">
 <p>a good person who speaks English and Spanish </p>
-<input type="https://github.com/BroccoliRules/CEEN_514.git" name="homepage">
+<a href="https://github.com/BroccoliRules/CEEN_514.git">link text</a>
+
 
 <h2>Daniel Arana</h2>
 <h6>Map Publishing / Editing</h6>
