--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
 <h6>Visualization / Formatting:</h6>
 <img src="DarllyRojas.github.io\AlexWhite.jpeg" alt="Alex" style="width:15%">
 <p>a good person who speaks English and Spanish </p>
-<a href="https://github.com/BroccoliRules/CEEN_514.git">link text</a>
+<a href="https://github.com/BroccoliRules/CEEN_514.git">GitHub</a>
 
 
 <h2>Daniel Arana</h2>
 <h6>Map Publishing / Editing</h6>
 <img src="DarllyRojas.github.io\DanielArana.jpeg" alt="Dan" style="width:15%">
 <p>a good person who speaks English and Spanish </p>
+ <a href="https://github.com/DarllyRojas/CEEN_514.git">GitHub</a>
 
 
 <h2>Darlly Rojas</h2>
 <h6>Geoprocess</h6>
 <img src="DarllyRojas.github.io\DarllyRojas.jpg" alt="Darlly" style="width:15%">
 <p> a good person who speaks Spanish, and has a toddler</p>
+ <a href="https://github.com/BroccoliRules2/CEEN_514.git">GitHub</a>
 
 <h2>Sergio Barbosa </h2>
 <h6>General Leader and Visual design:</h6>
 <img src="DarllyRojas.github.io\SergioBarbosa.jpeg" alt="Alex" style="width:15%">
 <p> a good person who speaks Spanish and English, and has twins a 2 month old baby</p>
+<a href="https://github.com/sabarbosac/CEEN_514">GitHub</a>
 
 
 
