--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
+<!DOCTYPE html>
 <html>
 
 <head>
-    <title> Our team </title>
+  <title>Darlly Rojas' Website!</title>
+  <link href="index.css" type="text/css" rel="stylesheet"/>
 </head>
 
-<body>
-<h1>Our Team</h1>
-<p>Latin Lovers is a team that has the purpose of making an application in tethys by the end of this semester. </p>
-<p>Our web app IDENTIFYING ZONES FOR FOREST USE is our first app </p>
+<form>
+  <h1> Welcome to my Website! </h1>
+  <h2> by Darlly Rojas </h2>
+</form>
 
-<h2>Alex White</h2>
-<h6>Visualization / Formatting:</h6>
-<img src="DarllyRojas.github.io\AlexWhite.jpeg" alt="Alex" style="width:15%">
-<p>a good person who speaks English and Spanish </p>
-<a href="https://github.com/BroccoliRules/CEEN_514.git">GitHub</a>
+<form>
+  <p>
+    If you wanna see the new version of "Our Team web site" with style, please click <a href="index_1.html">Here</a>
+  </p>
+  
+  <p>
+    If you wanna see the old version of "Our Team web site" without style, please click <a href="index_2.html">Here</a>
+  </p>
 
-
-<h2>Daniel Arana</h2>
-<h6>Map Publishing / Editing</h6>
-<img src="DarllyRojas.github.io\DanielArana.jpeg" alt="Dan" style="width:15%">
-<p>a good person who speaks English and Spanish </p>
- <a href="https://github.com/DarllyRojas/CEEN_514.git">GitHub</a>
+</form>
 
 
-<h2>Darlly Rojas</h2>
-<h6>Geoprocess</h6>
-<img src="DarllyRojas.github.io\DarllyRojas.jpg" alt="Darlly" style="width:15%">
-<p> a good person who speaks Spanish, and has a toddler</p>
- <a href="https://github.com/BroccoliRules2/CEEN_514.git">GitHub</a>
-
-<h2>Sergio Barbosa </h2>
-<h6>General Leader and Visual design:</h6>
-<img src="DarllyRojas.github.io\SergioBarbosa.jpeg" alt="Alex" style="width:15%">
-<p> a good person who speaks Spanish and English, and has twins a 2 month old baby</p>
-<a href="https://github.com/sabarbosac/CEEN_514">GitHub</a>
-
-
-
-</body>
 </html>
