--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     If you wanna see the Unit Converter, please click <a href="converter.html">Here</a>
   </p>
 
+  <p>
+    If you wanna see the Unit Converter, please click <a href="Manning.html">Here</a>
+  </p>
 
 
 </form>
