--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </p>
 
   <p>
-    If you wanna see the Unit Converter, please click <a href="Manning.html">Here</a>
+    If you wanna see the Manning Equation, please click <a href="Manning.html">Here</a>
   </p>
 
 
