--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     If you wanna see the Manning Equation, please click <a href="Manning.html">Here</a>
   </p>
 
+  <p>
+    If you wanna see the Leaflet Map, please click <a href="Map.html">Here</a>
+  </p>
 
 </form>
 
