--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </p>
 
   <p>
-    If you wanna see the Leaflet Map, please click <a href="Map.html">Here</a>
+    If you wanna see the Leaflet Map, please click <a href="map.html">Here</a>
   </p>
 
 </form>
