--- a/map.html
+++ b/map.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Darlly Rojas' Unit Converter!</title>
+  <title>Darlly Rojas' Leaflet Map!</title>
   <link href="map.css" type="text/css" rel="stylesheet"/>
   <script type="text/javascript" src="map.js"></script>
    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
