--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     If you wanna see the Leaflet Map, please click <a href="map.html">Here</a>
   </p>
 
+    <p>
+    If you wanna see Assigment 8, please click <a href="map hydroshare.html">Here</a>
+  </p>
 </form>
 
 
