--- a/example_map.html
+++ b/example_map.html
@@ -40,7 +40,7 @@
     }).addTo(mymap);
 
     /* An ASCIIGrid Raster with Total Annual Solar Bright */
-    d3.text('/data/bs.asc', function (asc) {
+    d3.text('data/Bay_Speed.asc', function (asc) {
       let s = L.ScalarField.fromASCIIGrid(asc);
       let layer = L.canvasLayer.scalarField(s).addTo(mymap);
       mymap.fitBounds(layer.getBounds());
