--- a/mapa_test.html
+++ b/mapa_test.html
@@ -33,7 +33,7 @@
         }).addTo(map);
 
         /* An ASCIIGrid Raster with Surface current velocity */
-        d3.text('data/bs.asc', function (asc) {
+        d3.text('data/Bay_Speed.asc', function (asc) {
             let s = L.ScalarField.fromASCIIGrid(asc);
             let layer = L.canvasLayer.scalarField(s).addTo(map);
             map.fitBounds(layer.getBounds());
