--- a/example_map.html
+++ b/example_map.html
@@ -1,6 +1,6 @@
 <head>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css" />
-  <link rel="stylesheet" href="examples.css" />
+  <!--<link rel="stylesheet" href="examples.css" />-->
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
 
